Fix spacing

--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ p {
 
 .parallax__layer--two {
   transform: translateZ(-1px) scale(2);
-  margin-top: 35px;
+  margin-top: 65px;
   width: 500px;
   margin-left: 200px;
 }
